Add Web3Forms contact form

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         "contactPoint": {
             "@type": "ContactPoint",
             "contactType": "Customer Service",
-            "email": "contact@visinet-conseil.fr",
+            "email": "contact@visinetconseil.fr",
             "telephone": "+33-7-46-25-94-18",
             "areaServed": "FR",
             "availableLanguage": "French"
@@ -303,6 +303,31 @@
         </div>
     </section>
 
+    <!-- Blog Section -->
+    <section id="blog" class="blog" aria-labelledby="blog-title">
+        <div class="container">
+            <h2 id="blog-title" class="section-title">Blog</h2>
+            <p class="section-subtitle">Découvrez nos articles sur la visibilité locale et le marketing digital</p>
+            <div class="blog-preview">
+                <article class="blog-preview-card">
+                    <div class="blog-preview-tag">
+                        <span class="blog-preview-tag-dot" aria-hidden="true"></span>
+                        <span>Visibilité locale</span>
+                    </div>
+                    <h3>Améliorer sa visibilité locale en 2025</h3>
+                    <p class="blog-preview-text">
+                        La visibilité locale est aujourd'hui l'un des facteurs les plus importants pour attirer des clients. Découvrez comment optimiser votre présence digitale locale avec Google Business Profile, le SEO local et les avis clients.
+                    </p>
+                    <a href="blog.html" class="blog-preview-link">
+                        Lire l'article
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-left: 0.5rem;">
+                            <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </a>
+                </article>
+            </div>
+        </div>
+    </section>
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio" aria-labelledby="portfolio-title">
@@ -405,52 +430,38 @@
             <p class="section-subtitle">Trouvez des réponses aux questions les plus courantes</p>
             <div class="faq-list" role="list">
                 <details class="faq-item" role="listitem">
-                    <summary class="faq-question">Quels types de réseaux accompagnez-vous ?</summary>
+                    <summary class="faq-question">À quels moments un accompagnement devient-il pertinent ?</summary>
                     <div class="faq-answer">
-                        <p>Nous accompagnons les franchises, groupements, réseaux multi-sites et points de vente indépendants affiliés. Notre expertise couvre tous les secteurs : retail, restauration, services B2B, et bien d'autres.</p>
+                        <p>Un accompagnement devient utile lorsqu'une enseigne ou un point de vente constate un manque de visibilité locale, une incohérence entre le discours national et les actions terrain, ou une difficulté à transformer la présence digitale en performance commerciale.</p>
+                        <p>Il est également pertinent lors des phases de développement, de structuration ou de repositionnement du réseau.</p>
                     </div>
                 </details>
                 <details class="faq-item" role="listitem">
-                    <summary class="faq-question">Combien de temps dure généralement un accompagnement ?</summary>
+                    <summary class="faq-question">Comment concilier communication nationale et réalités locales des points de vente ?</summary>
                     <div class="faq-answer">
-                        <p>La durée varie selon vos besoins. Un audit stratégique peut être réalisé en 2-3 semaines, tandis qu'un accompagnement opérationnel peut s'étendre sur plusieurs mois selon la taille de votre réseau.</p>
+                        <p>L'enjeu est de garantir une image de marque cohérente tout en laissant aux points de vente la capacité d'exister localement.</p>
+                        <p>VisiNet Conseil intervient pour structurer un cadre commun (messages, outils, bonnes pratiques) et accompagner les déclinaisons locales afin qu'elles restent alignées, efficaces et adaptées au terrain.</p>
                     </div>
                 </details>
                 <details class="faq-item" role="listitem">
-                    <summary class="faq-question">Quels sont vos piliers d'expertise ?</summary>
+                    <summary class="faq-question">Quels leviers sont généralement activés en priorité ?</summary>
                     <div class="faq-answer">
-                        <div class="faq-expertise">
-                            <div class="faq-expertise-item">
-                                <h4>1. Expertise Réseaux & Franchise</h4>
-                                <ul>
-                                    <li>Enjeux franchiseur / franchisés</li>
-                                    <li>Cohérence de marque national et local</li>
-                                    <li>Analyse des écarts de performance entre points de vente</li>
-                                    <li>Construction d'un cadre digital commun pour tout le réseau</li>
-                                </ul>
-                            </div>
-                            <div class="faq-expertise-item">
-                                <h4>2. Solutions Digitales Locales</h4>
-                                <ul>
-                                    <li>SEO local & optimisation Google Business Profile</li>
-                                    <li>Communication locale & réseaux sociaux</li>
-                                    <li>CRM & campagnes marketing ciblées</li>
-                                    <li>Analyse concurrentielle & recommandations stratégiques</li>
-                                </ul>
-                            </div>
-                        </div>
+                        <p>Les actions sont définies après un diagnostic, mais portent le plus souvent sur la visibilité locale (SEO local et Google Business Profile), la cohérence des contenus digitaux, la relation client (CRM) et l'animation des canaux de communication locaux.</p>
+                        <p>L'objectif est d'activer les leviers ayant un impact direct et mesurable.</p>
                     </div>
                 </details>
                 <details class="faq-item" role="listitem">
-                    <summary class="faq-question">Proposez-vous des formations pour les équipes ?</summary>
+                    <summary class="faq-question">Peut-on commencer par un diagnostic avant tout engagement ?</summary>
                     <div class="faq-answer">
-                        <p>Absolument. Nous proposons des ateliers et formations sur le SEO local, le CRM, les réseaux sociaux et la communication locale pour rendre vos équipes autonomes.</p>
+                        <p>Oui. Le diagnostic constitue généralement le point d'entrée de l'accompagnement.</p>
+                        <p>Il permet d'évaluer la situation réelle, d'identifier les écarts et de définir des priorités claires avant toute mise en œuvre opérationnelle.</p>
                     </div>
                 </details>
                 <details class="faq-item" role="listitem">
-                    <summary class="faq-question">Comment se déroule le premier contact ?</summary>
+                    <summary class="faq-question">Comment mesurez-vous l'impact des actions menées ?</summary>
                     <div class="faq-answer">
-                        <p>Lors du premier contact, nous organisons un appel de 30 minutes pour comprendre vos enjeux, vos objectifs et vos contraintes. Cette première rencontre nous permet de vous proposer une solution adaptée.</p>
+                        <p>Les actions sont suivies à l'aide d'indicateurs concrets : visibilité locale, interactions sur les fiches Google, performances des contenus, engagement client et, lorsque cela est possible, impact sur l'activité commerciale.</p>
+                        <p>L'objectif est d'inscrire l'accompagnement dans une logique de pilotage et d'amélioration continue.</p>
                     </div>
                 </details>
             </div>
@@ -473,7 +484,7 @@
                         </div>
                         <div class="info-content">
                             <h4>Email</h4>
-                            <p><a href="mailto:contact@visinet-conseil.fr">contact@visinet-conseil.fr</a></p>
+                            <p><a href="mailto:contact@visinetconseil.fr">contact@visinetconseil.fr</a></p>
                         </div>
                     </div>
                     <div class="info-item">
@@ -510,7 +521,15 @@
                         </a>
                     </div>
                 </div>
-                <form class="contact-form" aria-label="Formulaire de contact">
+                <form class="contact-form"
+                aria-label="Formulaire de contact"
+                action="https://api.web3forms.com/submit"
+                method="POST">
+                <input type="hidden" name="access_key" value="60f29a1c-35a8-42ec-82f4-df0213aa3d0b">
+<input type="hidden" name="subject" value="Nouveau message – VisiNet Conseil">
+<input type="hidden" name="botcheck">
+
+          
                     <!-- Honeypot field (anti-spam) -->
                     <input type="text" name="website" class="honeypot" tabindex="-1" autocomplete="off" aria-hidden="true">
                     
