Add thank you page redirect

--- a/index.html
+++ b/index.html
@@ -525,6 +525,7 @@
                 aria-label="Formulaire de contact"
                 action="https://api.web3forms.com/submit"
                 method="POST">
+                <input type="hidden" name="redirect" value="https://visinetconseil.fr/merci.html">
                 <input type="hidden" name="access_key" value="60f29a1c-35a8-42ec-82f4-df0213aa3d0b">
 <input type="hidden" name="subject" value="Nouveau message – VisiNet Conseil">
 <input type="hidden" name="botcheck">
