Summary: Update index.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <span class="hero-tag">Réseaux sociaux</span>
                 <span class="hero-tag">Conseil stratégique</span>
             </div>
-            <p class="hero-subtitle">+30% de visibilité en 90 jours grâce à notre expertise en marketing local et transformation digitale</p>
+            <p class="hero-subtitle">Augmenter votre visibilité en 90 jours grâce à notre expertise en marketing local et transformation digitale</p>
             <div class="hero-buttons">
                 <a href="#contact" class="btn btn-primary" aria-label="Réserver un audit gratuit de 30 minutes">Audit gratuit 30 min</a>
                 <a href="#services" class="btn btn-secondary" aria-label="Découvrir nos services">Découvrir nos services</a>
