--- a/index.html
+++ b/index.html
@@ -513,8 +513,13 @@
                     <div class="calendly-container">
                         <h4>Prendre rendez-vous</h4>
                         <p>Planifiez un appel gratuit pour discuter de votre projet</p>
-                        <a href="https://calendly.com/votre-lien" target="_blank" rel="noopener noreferrer" class="btn btn-primary calendly-button">
-                            Réserver un créneau
+                        <a href="https://calendly.com/contact-visinetconseil/30min"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="btn btn-primary">
+                       Réserver un créneau
+                     </a>
+                    
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-left: 0.5rem;">
                                 <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
