--- a/index.html
+++ b/index.html
@@ -582,7 +582,6 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="Visinet Conseil" class="footer-logo" width="50" height="50">
-                    <p>Solutions digitales innovantes pour votre réseau</p>
                 </div>
                 <div class="footer-links">
                     <h4>Liens rapides</h4>
@@ -598,11 +597,13 @@
                     </ul>
                 </div>
                 <div class="footer-social">
-                    <h4>Suivez-nous</h4>
                     <div class="social-links">
-                        <a href="#" aria-label="LinkedIn">LinkedIn</a>
-                        <a href="#" aria-label="Twitter">Twitter</a>
-                        <a href="#" aria-label="Facebook">Facebook</a>
+                        <a href="https://www.linkedin.com/company/visinet-conseil/" target="_blank" rel="noopener noreferrer" aria-label="Suivre VisiNet Conseil sur LinkedIn">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" style="vertical-align: middle; margin-right: 0.5rem;">
+                                <path d="M19 0H5C2.239 0 0 2.239 0 5V19C0 21.761 2.239 24 5 24H19C21.761 24 24 21.761 24 19V5C24 2.239 21.761 0 19 0ZM8 19H5V9H8V19ZM6.5 7.5C5.67 7.5 5 6.83 5 6C5 5.17 5.67 4.5 6.5 4.5C7.33 4.5 8 5.17 8 6C8 6.83 7.33 7.5 6.5 7.5ZM20 19H17V13.5C17 11.57 15.43 10 13.5 10C11.57 10 10 11.57 10 13.5V19H7V9H10V10.81C10.88 9.56 12.39 8.62 14.12 8.62C17.79 8.62 20 11.04 20 14.75V19Z" fill="currentColor"/>
+                            </svg>
+                            Suivre VisiNet Conseil sur LinkedIn
+                        </a>
                     </div>
                 </div>
             </div>
