--- a/blog.html
+++ b/blog.html
@@ -193,15 +193,16 @@
                 <div class="footer-links">
                     <h4>Liens rapides</h4>
                     <ul>
-                        <li><a href="#accueil">Accueil</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#apropos">À propos</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="#temoignages">Témoignages</a></li>
-                        <li><a href="#portfolio">Réalisations</a></li>
-                        <li><a href="#faq">FAQ</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
+                        <li><a href="/#accueil">Accueil</a></li>
+                        <li><a href="/#services">Services</a></li>
+                        <li><a href="/#apropos">À propos</a></li>
+                        <li><a href="/blog.html">Blog</a></li>
+                        <li><a href="/#temoignages">Témoignages</a></li>
+                        <li><a href="/#portfolio">Réalisations</a></li>
+                        <li><a href="/#faq">FAQ</a></li>
+                        <li><a href="/#contact">Contact</a></li>
+                      </ul>
+                      
                 </div>
                 <div class="footer-social">
                     <div class="social-links">
