Fix mobile menu

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="Visinet Conseil - Logo" class="logo" width="40" height="40">
                 <span class="brand-name">Visinet Conseil</span>
             </div>
-            <ul class="nav-menu" role="menubar">
+            <ul class="nav-menu" id="nav-menu" role="menubar">
                 <li role="none"><a href="#accueil" role="menuitem">Accueil</a></li>
                 <li role="none"><a href="#services" role="menuitem">Services</a></li>
                 <li role="none"><a href="#apropos" role="menuitem">À propos</a></li>
@@ -613,7 +613,7 @@
         </div>
     </footer>
 
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
 
 </body>
 </html>
