Update footer and navigation

--- a/blog.html
+++ b/blog.html
@@ -217,6 +217,11 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2024 Visinet Conseil. Tous droits réservés.</p>
+                <p style="margin-top: 0.5rem; font-size: 0.875rem;">
+                    <a href="politique-confidentialite.html" style="color: rgba(255, 255, 255, 0.8); text-decoration: none; margin-right: 1rem;">Politique de confidentialité</a>
+                    <a href="mentions-legales.html" style="color: rgba(255, 255, 255, 0.8); text-decoration: none; margin-right: 1rem;">Mentions légales</a>
+                    <a href="#" data-cookie-preferences style="color: rgba(255, 255, 255, 0.8); text-decoration: none;">Gérer les cookies</a>
+                </p>
             </div>
         </div>
     </footer>
