--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                         <input type="checkbox" id="rgpd" name="rgpd" required aria-required="true">
                         <label for="rgpd">
                             J'accepte que mes données soient utilisées pour me recontacter. 
-                            <a href="#politique-confidentialite" target="_blank" rel="noopener noreferrer">Politique de confidentialité</a> *
+                            <a href="politique-confidentialite.html" target="_blank" rel="noopener noreferrer">Politique de confidentialité</a> *
                         </label>
                     </div>
                     <p class="form-help-text">Réponse sous 24h ouvrées</p>
@@ -609,6 +609,11 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2024 Visinet Conseil. Tous droits réservés.</p>
+                <p style="margin-top: 0.5rem; font-size: 0.875rem;">
+                    <a href="politique-confidentialite.html" style="color: rgba(255, 255, 255, 0.8); text-decoration: none; margin-right: 1rem;">Politique de confidentialité</a>
+                    <a href="mentions-legales.html" style="color: rgba(255, 255, 255, 0.8); text-decoration: none; margin-right: 1rem;">Mentions légales</a>
+                    <a href="#" data-cookie-preferences style="color: rgba(255, 255, 255, 0.8); text-decoration: none;">Gérer les cookies</a>
+                </p>
             </div>
         </div>
     </footer>
