Fix navbar, footer links and legal pages content

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Blog – Visibilité locale en 2025 | VisiNet Conseil">
     <meta name="description" content="Mini-article sur la visibilité locale et le SEO local pour attirer plus de clients en 2025. Focus Google Business Profile, avis clients et optimisation du site.">
     <meta name="keywords" content="visibilité locale, SEO local, Google Business Profile, avis clients, marketing local">
-    <meta name="author" content="Visinet Conseil">
+    <meta name="author" content="VisiNet Conseil">
     <meta name="robots" content="index, follow">
     <meta name="language" content="French">
     
@@ -47,8 +47,8 @@
         <div class="container">
             <div class="nav-brand">
                 <a href="index.html" aria-label="Retour à l'accueil" style="display: flex; align-items: center; gap: 0.75rem; text-decoration: none;">
-                    <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="Visinet Conseil - Logo" class="logo" width="40" height="40">
-                    <span class="brand-name">Visinet Conseil</span>
+                    <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="VisiNet Conseil - Logo" class="logo" width="40" height="40">
+                    <span class="brand-name">VisiNet Conseil</span>
                 </a>
             </div>
             <ul class="nav-menu" role="menubar">
@@ -188,7 +188,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="Visinet Conseil" class="footer-logo" width="50" height="50">
+                    <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="VisiNet Conseil" class="footer-logo" width="50" height="50">
                 </div>
                 <div class="footer-links">
                     <h4>Liens rapides</h4>
@@ -216,7 +216,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Visinet Conseil. Tous droits réservés.</p>
+                <p>&copy; 2024 VisiNet Conseil. Tous droits réservés.</p>
                 <p style="margin-top: 0.5rem; font-size: 0.875rem;">
                     <a href="politique-confidentialite.html" style="color: rgba(255, 255, 255, 0.8); text-decoration: none; margin-right: 1rem;">Politique de confidentialité</a>
                     <a href="mentions-legales.html" style="color: rgba(255, 255, 255, 0.8); text-decoration: none; margin-right: 1rem;">Mentions légales</a>
