--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -27,8 +27,8 @@
         <div class="container">
             <div class="nav-brand">
                 <a href="index.html" aria-label="Retour à l'accueil" style="display: flex; align-items: center; gap: 0.75rem; text-decoration: none;">
-                    <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="Visinet Conseil - Logo" class="logo" width="40" height="40">
-                    <span class="brand-name">Visinet Conseil</span>
+                    <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="VisiNet Conseil - Logo" class="logo" width="40" height="40">
+                    <span class="brand-name">VisiNet Conseil</span>
                 </a>
             </div>
             <ul class="nav-menu" role="menubar">
@@ -52,7 +52,7 @@
             <article class="blog-wrapper">
                 <h1 id="legal-title" class="blog-title">Mentions légales</h1>
                 <p class="blog-intro">
-                    <strong>Dernière mise à jour :</strong> Décembre 2024
+                    <strong>Dernière mise à jour :</strong> décembre 2024
                 </p>
 
                 <section class="blog-section">
@@ -61,8 +61,8 @@
                         Le site <strong>www.visinet-conseil.fr</strong> est édité par :
                     </p>
                     <ul>
-                        <li><strong>Raison sociale :</strong> Visinet Conseil</li>
-                        <li><strong>Email :</strong> <a href="mailto:contact@visinetconseil.fr">contact@visinetconseil.fr</a></li>
+                        <li><strong>Raison sociale :</strong> VisiNet Conseil</li>
+                        <li><strong>E-mail :</strong> <a href="mailto:contact@visinetconseil.fr">contact@visinetconseil.fr</a></li>
                         <li><strong>Téléphone :</strong> <a href="tel:+33746259418">07 46 25 94 18</a></li>
                         <li><strong>Adresse :</strong> Île-de-France, France</li>
                     </ul>
@@ -71,7 +71,7 @@
                 <section class="blog-section blog-section--light">
                     <h2>2. Directeur de publication</h2>
                     <p>
-                        Le directeur de publication est le représentant légal de Visinet Conseil.
+                        Le directeur de publication est le représentant légal de VisiNet Conseil.
                     </p>
                 </section>
 
@@ -81,26 +81,23 @@
                         Ce site est hébergé par :
                     </p>
                     <ul>
-                        <li><strong>Hébergeur :</strong> [À compléter avec les informations de votre hébergeur]</li>
-                        <li><strong>Adresse :</strong> [À compléter]</li>
-                        <li><strong>Téléphone :</strong> [À compléter]</li>
+                        <li><strong>Hébergeur :</strong> GitHub, Inc.</li>
+                        <li><strong>Adresse :</strong> 88 Colin P. Kelly Jr. Street, San Francisco, CA 94107, États-Unis</li>
+                        <li><strong>Téléphone :</strong> +1 (877) 448-4820</li>
+                        <li><strong>Site web :</strong> <a href="https://pages.github.com" target="_blank" rel="noopener noreferrer">https://pages.github.com</a></li>
                     </ul>
-                    <p class="blog-intro" style="margin-top: 1rem;">
-                        <em>Note : Veuillez remplir ces informations avec les données de votre hébergeur réel 
-                        (par exemple : GitHub Pages, Netlify, OVH, etc.)</em>
-                    </p>
                 </section>
 
                 <section class="blog-section blog-section--light">
                     <h2>4. Propriété intellectuelle</h2>
                     <p>
                         L'ensemble du contenu de ce site (textes, images, vidéos, logos, graphismes, etc.) 
-                        est la propriété exclusive de Visinet Conseil, sauf mention contraire.
+                        est la propriété exclusive de VisiNet Conseil, sauf mention contraire.
                     </p>
                     <p>
                         Toute reproduction, représentation, modification, publication, adaptation de tout ou 
                         partie des éléments du site, quel que soit le moyen ou le procédé utilisé, est interdite 
-                        sans autorisation écrite préalable de Visinet Conseil.
+                        sans autorisation écrite préalable de VisiNet Conseil.
                     </p>
                     <p>
                         Toute exploitation non autorisée du site ou de son contenu engage la responsabilité civile 
@@ -115,7 +112,7 @@
                         pleine et entière des conditions générales d'utilisation ci-après décrites.
                     </p>
                     <p>
-                        Visinet Conseil se réserve le droit de modifier, suspendre ou interrompre l'accès à tout 
+                        VisiNet Conseil se réserve le droit de modifier, suspendre ou interrompre l'accès à tout 
                         ou partie du site, à tout moment, sans préavis.
                     </p>
                 </section>
@@ -145,7 +142,7 @@
                 <section class="blog-section blog-section--light">
                     <h2>8. Liens externes</h2>
                     <p>
-                        Le site peut contenir des liens vers d'autres sites web. Visinet Conseil n'exerce aucun 
+                        Le site peut contenir des liens vers d'autres sites web. VisiNet Conseil n'exerce aucun 
                         contrôle sur ces sites et décline toute responsabilité quant à leur contenu, leur accessibilité 
                         ou leurs pratiques en matière de protection des données.
                     </p>
@@ -154,13 +151,13 @@
                 <section class="blog-section">
                     <h2>9. Limitation de responsabilité</h2>
                     <p>
-                        Visinet Conseil s'efforce de fournir sur le site des informations aussi précises que possible. 
+                        VisiNet Conseil s'efforce de fournir sur le site des informations aussi précises que possible. 
                         Toutefois, il ne pourra être tenu responsable des omissions, des inexactitudes et des carences 
                         dans la mise à jour, qu'elles soient de son fait ou du fait des tiers partenaires qui lui 
                         fournissent ces informations.
                     </p>
                     <p>
-                        Visinet Conseil ne pourra être tenu responsable des dommages directs et indirects causés au 
+                        VisiNet Conseil ne pourra être tenu responsable des dommages directs et indirects causés au 
                         matériel de l'utilisateur, lors de l'accès au site, et résultant soit de l'utilisation d'un 
                         matériel ne répondant pas aux spécifications, soit de l'apparition d'un bug ou d'une 
                         incompatibilité.
@@ -182,7 +179,7 @@
                         Pour toute question concernant ces mentions légales, vous pouvez nous contacter :
                     </p>
                     <ul>
-                        <li>Email : <a href="mailto:contact@visinetconseil.fr">contact@visinetconseil.fr</a></li>
+                        <li>E-mail : <a href="mailto:contact@visinetconseil.fr">contact@visinetconseil.fr</a></li>
                         <li>Téléphone : <a href="tel:+33746259418">07 46 25 94 18</a></li>
                     </ul>
                 </section>
@@ -194,7 +191,6 @@
                     </div>
                     <a href="index.html#contact" class="cta-button">
                         Nous contacter
-                        <span>↗</span>
                     </a>
                 </div>
             </article>
@@ -206,7 +202,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="Visinet Conseil" class="footer-logo" width="50" height="50">
+                    <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="VisiNet Conseil" class="footer-logo" width="50" height="50">
                 </div>
                 <div class="footer-links">
                     <h4>Liens rapides</h4>
@@ -227,7 +223,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Visinet Conseil. Tous droits réservés.</p>
+                <p>&copy; 2024 VisiNet Conseil. Tous droits réservés.</p>
             </div>
         </div>
     </footer>
