--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -27,8 +27,8 @@
         <div class="container">
             <div class="nav-brand">
                 <a href="index.html" aria-label="Retour à l'accueil" style="display: flex; align-items: center; gap: 0.75rem; text-decoration: none;">
-                    <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="Visinet Conseil - Logo" class="logo" width="40" height="40">
-                    <span class="brand-name">Visinet Conseil</span>
+                    <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="VisiNet Conseil - Logo" class="logo" width="40" height="40">
+                    <span class="brand-name">VisiNet Conseil</span>
                 </a>
             </div>
             <ul class="nav-menu" role="menubar">
@@ -52,7 +52,7 @@
             <article class="blog-wrapper">
                 <h1 id="privacy-title" class="blog-title">Politique de confidentialité</h1>
                 <p class="blog-intro">
-                    <strong>Dernière mise à jour :</strong> Décembre 2024
+                    <strong>Dernière mise à jour :</strong> décembre 2024
                 </p>
 
                 <section class="blog-section">
@@ -72,8 +72,8 @@
                         Le responsable du traitement des données personnelles est :
                     </p>
                     <ul>
-                        <li><strong>Visinet Conseil</strong></li>
-                        <li>Email : <a href="mailto:contact@visinetconseil.fr">contact@visinetconseil.fr</a></li>
+                        <li><strong>VisiNet Conseil</strong></li>
+                        <li>E-mail : <a href="mailto:contact@visinetconseil.fr">contact@visinetconseil.fr</a></li>
                         <li>Téléphone : <a href="tel:+33746259418">07 46 25 94 18</a></li>
                         <li>Adresse : Île-de-France, France</li>
                     </ul>
@@ -211,14 +211,14 @@
                     <p>
                         Vous avez également le droit d'introduire une réclamation auprès de la Commission Nationale 
                         de l'Informatique et des Libertés (CNIL) : 
-                        <a href="https://www.cnil.fr" target="_blank" rel="noopener noreferrer">www.cnil.fr</a>
+                        <a href="https://www.cnil.fr" target="_blank" rel="noopener noreferrer">https://www.cnil.fr</a>
                     </p>
                 </section>
 
                 <section class="blog-section">
                     <h2>11. Transferts internationaux</h2>
                     <p>
-                        Vos données personnelles sont stockées et traitées au sein de l'Union Européenne. 
+                        Vos données personnelles sont stockées et traitées au sein de l'Union européenne. 
                         En cas de transfert vers un pays tiers, nous nous assurons que des garanties appropriées 
                         sont en place conformément au RGPD.
                     </p>
@@ -240,7 +240,7 @@
                         données personnelles, vous pouvez nous contacter :
                     </p>
                     <ul>
-                        <li>Email : <a href="mailto:contact@visinetconseil.fr">contact@visinetconseil.fr</a></li>
+                        <li>E-mail : <a href="mailto:contact@visinetconseil.fr">contact@visinetconseil.fr</a></li>
                         <li>Téléphone : <a href="tel:+33746259418">07 46 25 94 18</a></li>
                     </ul>
                 </section>
@@ -252,7 +252,6 @@
                     </div>
                     <a href="index.html#contact" class="cta-button">
                         Nous contacter
-                        <span>↗</span>
                     </a>
                 </div>
             </article>
@@ -264,7 +263,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="Visinet Conseil" class="footer-logo" width="50" height="50">
+                    <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="VisiNet Conseil" class="footer-logo" width="50" height="50">
                 </div>
                 <div class="footer-links">
                     <h4>Liens rapides</h4>
@@ -285,7 +284,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Visinet Conseil. Tous droits réservés.</p>
+                <p>&copy; 2024 VisiNet Conseil. Tous droits réservés.</p>
             </div>
         </div>
     </footer>
