Fix domain name in legal mentions

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -58,7 +58,7 @@
                 <section class="blog-section">
                     <h2>1. Éditeur du site</h2>
                     <p>
-                        Le site <strong>www.visinet-conseil.fr</strong> est édité par :
+                        Le site <strong>visinetconseil.fr</strong> est édité par :
                     </p>
                     <ul>
                         <li><strong>Raison sociale :</strong> VisiNet Conseil</li>
@@ -108,7 +108,7 @@
                 <section class="blog-section">
                     <h2>5. Conditions d'utilisation</h2>
                     <p>
-                        L'utilisation du site <strong>www.visinet-conseil.fr</strong> implique l'acceptation 
+                        L'utilisation du site <strong>visinetconseil.fr</strong> implique l'acceptation 
                         pleine et entière des conditions générales d'utilisation ci-après décrites.
                     </p>
                     <p>
